# storage/api-docs/api-docs.json
@@ -14,13 +14,12 @@
     },
     "servers": [
         {
-            "url": "http://my-default-host.com",
+            "url": "http://localhost:8000/api/v1",
             "description": "Demo API Server"
         }
     ],
     "paths": {
-        "/api": {},
-        "api/v1/register": {
+        "/register": {
             "post": {
                 "tags": [
                     "Auth"
